--- a/assets/designing.css
+++ b/assets/designing.css
@@ -1,4 +1,4 @@
-span.st-emotion-cache-10trblm.e1nzilvr1
+/* span.st-emotion-cache-10trblm.e1nzilvr1
 {
     background-color: lightblue;
     color: lightyellow;
@@ -10,4 +10,15 @@ span.st-emotion-cache-10trblm.e1nzilvr1
 
 div.st-emotion-cache-5rimss.e1nzilvr5 > hr {
     background-color: red;
+} */
+
+button.st-emotion-cache-7ym5gk.ef3psqc7{
+    background-color: lightblue;
+    
+
+}
+
+div.row-widget.stButton{
+    text-align: right;
+
 }
