--- a/assets/style_CSS2.css
+++ b/assets/style_CSS2.css
@@ -7,6 +7,15 @@ div.st-emotion-cache-1wivap2.e1i5pmia3{
 
 }
 
+div.st-emotion-cache-1n76uvr.e1f1d6gn1{
+    color: white
+
+}
+
+span.st-emotion-cache-10trblm.e1nzilvr1{
+    color: white
+
+}
 
 
 
